# tg_wb_bot

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: std_run.yml
backend/: .pylintrc  Dockerfile  pyproject.toml
backend/bot/: admin.py  apps.py  models.py  views.py
backend/core/: settings.py
