[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksey <ranangariel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
